<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B3F8F8F8">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="35dp"
            android:background="#CCF8F8F8"
            android:baselineAligned="false">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/flush"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:id="@+id/subject_flush"
                    android:layout_gravity="center"
                    android:contentDescription="@string/flush" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:id="@+id/sum_class"
                    android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

            <ImageView
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_arrow"
                    android:gravity="end"
                    android:src="@drawable/left"
                    android:padding="10dp"
                    android:contentDescription="@string/left_page" />

            <TextView
                    android:text="@string/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/class_week"
                    android:textSize="18sp"
                    android:textColor="#007aff"
                    android:gravity="center"
                    android:textStyle="bold"
                    />

            <ImageView
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/right_arrow"
                    android:src="@drawable/right"
                    android:padding="10dp"
                    android:contentDescription="@string/right_page" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:layout_weight="1">

            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/up"
                    android:padding="4dp"
                    android:id="@+id/up_arrow"
                    android:layout_marginEnd="5dp"
                    android:background="#33999999"
                    android:contentDescription="@string/last_page" />

            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/down"
                    android:id="@+id/down_arrow"
                    android:padding="4dp"
                    android:layout_marginEnd="10dp"
                    android:background="#33999999"
                    android:contentDescription="@string/next_page" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/first_class"
                android:gravity="center">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_class_time"
                    android:gravity="start"
                    android:textSize="18sp"
                    android:paddingStart="18dp"
                    android:paddingEnd="0dp"
                    android:text="1-2"
                    android:textColor="#020000"
                    android:layout_weight="1" />

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="2">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="数字逻辑"
                        android:textSize="16sp"
                        android:id="@+id/first_class_name"
                        android:textColor="#020000" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">
                    <ImageView
                            android:layout_width="12sp"
                            android:layout_height="12sp"
                            android:src="@drawable/position"
                            android:contentDescription="@string/position" />
                    <TextView
                            android:layout_width="match_parent"
                            android:text="Y03-212"
                            android:paddingStart="5sp"
                            android:paddingEnd="0sp"
                            android:textSize="11sp"
                            android:layout_height="wrap_content"
                            android:id="@+id/first_class_location" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    tools:ignore="UseCompoundDrawables">
                <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/time"
                        android:contentDescription="@string/time" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:text="08:00-09:35"
                        android:paddingStart="10sp"
                        android:paddingEnd="20sp"
                        android:id="@+id/first_class_real_time" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/second_class"
                android:gravity="center">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_class_time"
                    android:gravity="start"
                    android:textSize="18sp"
                    android:paddingStart="18dp"
                    android:paddingEnd="0dp"
                    android:text="1-2"
                    android:textColor="#020000"
                    android:layout_weight="1" />

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="2">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="数字逻辑"
                        android:textSize="16sp"
                        android:id="@+id/second_class_name"
                        android:textColor="#020000" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">
                    <ImageView
                            android:layout_width="12sp"
                            android:layout_height="12sp"
                            android:src="@drawable/position"
                            android:contentDescription="@string/position" />
                    <TextView
                            android:layout_width="match_parent"
                            android:text="Y03-212"
                            android:paddingStart="5sp"
                            android:paddingEnd="0sp"
                            android:textSize="11sp"
                            android:layout_height="wrap_content"
                            android:id="@+id/second_class_location" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    tools:ignore="UseCompoundDrawables">
                <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/time"
                        android:contentDescription="@string/time" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:text="08:00-09:35"
                        android:paddingStart="10sp"
                        android:paddingEnd="20sp"
                        android:id="@+id/second_class_real_time" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
